# news_classification

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: python-tests.yml
src/news_classification/: ai_models.py  news_scraper.py  streamlit_app.py
tests/: test_ai_models.py  test_news_functions.py
